mobile-app/test_output_2.txt
yarn run v1.22.22
$ jest BillComponent
FAIL src/components/__tests__/BillComponent.test.tsx
  ΓùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     ΓÇó If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     ΓÇó If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     ΓÇó To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     ΓÇó If you need a custom transformation specify a "transform" option in your config.
     ΓÇó If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\joel.abraham\AI Advocate\AIAdvocate\node_modules\react-native-toast-message\lib\index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export { Toast as default } from './src/Toast';
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

       5 | import { Pressable, StyleSheet, View } from "react-native";
       6 | import { Card, IconButton, Text, useTheme, Button } from "react-native-paper";
    >  7 | import Toast from "react-native-toast-message";
         | ^
       8 | import { useTranslation } from "react-i18next";
       9 |
      10 | import { supabase } from "@/lib/supabase";

      at Runtime.createScriptFromCode (../node_modules/jest-runtime/build/index.js:1505:14)
      at Object.require (src/components/Bill.tsx:7:1)
      at Object.require (src/components/__tests__/BillComponent.test.tsx:3:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.509 s
Ran all test suites matching /BillComponent/i.
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.
